[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = [
    "jpeg",
    "serialize",{% if fast_compiles %}
    "dynamic",{% endif %}
] }
# Other crates of possible interest:
# parry2d / 3d
# rapier2d / 3d
# noise-rs
# fastrand
# ndarray
# petgraph
# derive_more
# enum-iterator
# itertools
# serde
# serde_derive
# serde_json
# chrono

{% if bevy_version == "git" %}[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
{% endif %}
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
