[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/<USERNAME>/{{project-name}}"
documentation = "https://docs.rs/{{project-name}}"
keywords = []
categories = []
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# See https://bevy-cheatbook.github.io/setup/bevy-config.html for features etc.
bevy = { version = "0.7", default-features = false, features = [] }

[dev-dependencies]
bevy = "0.7.0"

# Other crates of possible interest:
# iyes_loopless = "0.5.1"
# bevy_common_assets = { version = "0.2.0", features = ["ron"] }
# ron = "0.7.0"
# strum
# derive_more
# enum_default
# itertools
# serde
# serde_derive
# serde_json
# fastrand
# ndarray
# bevy_tweening
# bevy_kira_audio
# parry2d / 3d
# rapier2d / 3d
# petgraph
# noise-rs
# indoc

{% if bevy_git %}[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }

{% endif %}# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
