[workspace]
resolver = "2"
members = []

[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# See https://bevy-cheatbook.github.io/setup/bevy-config.html for features etc.
bevy = { version = "0.7", features = [
    "jpeg",
    "serialize",{% if fast_compiles %}
    "dynamic",  # needed for fast-compile, together w. ".cargo/config.toml"{% endif %}
] }
bevy-inspector-egui = { version = "0.11", optional = true }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", optional = true }

# Other crates of possible interest:
# derive_more
# enum-iterator
# itertools
# fastrand
# ndarray
# serde
# serde_derive
# serde_json
# bevy_tweening
# bevy_kira_audio
# parry2d / 3d
# rapier2d / 3d
# petgraph
# noise-rs

{% if bevy_version == "git" %}[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }

{% endif %}[features]
default = []
editor = [ "bevy_editor_pls" ]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
