[workspace]
resolver = "2"
members = []

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/<USERNAME>/{{project-name}}"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["serialize"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", optional = true }
anyhow = "1.0"

# Other crates of possible interest:
# bevy-atlas-loader
# iyes_loopless
# ron = "0.7.0"
# strum
# derive_more
# enum_default
# bevy_tweening
# bevy_kira_audio
# parry2d / 3d
# rapier2d / 3d

{% if bevy_git %}[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }

{% endif %}[features]
default = []
editor = [ "bevy_editor_pls" ]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
