[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# See https://bevy-cheatbook.github.io/setup/bevy-config.html for features etc.
bevy = { version = "0.6", default-features = false, features = [] }

# Other crates of possible interest:
# derive_more
# enum-iterator
# itertools
# fastrand
# ndarray
# serde
# serde_derive
# serde_json
# bevy_kira_audio
# parry2d / 3d
# rapier2d / 3d
# petgraph
# noise-rs
